  - Path parameter names are matching with the following regex:
      "\{([\w[-\w\.]*)\}"
  - com.sun.jersey.api.representation.FormParam has been deleted. Use
    javax.ws.rs.FormParam instead.
  - javax.ws.rs.ConsumeMime and javax.ws.rs.ProduceMime have been renamed
    to javax.ws.rs.Consumes and javax.ws.rs.Produces respectively.

release 0.8 (2008-06-20)
- UriBuilder supports opaque URIs such as "mailto:p@c".
- Support the reading of an entity delcared as the type Object using JAXB
  unmarshalling. It is required that there be a ContextResolver<JAXBContext>
  that supports a JAXBContext for the Object type.
- The following properties can be set on the client:
    Read timeout, connection timeout, chunked encoding length and 
    following redirections.
  See setter methods on com.sun.jersey.api.client.ClientConfig and
  properties on com.sun.jersey.api.client.config.ClientConfig.
- Simplified web.xml configuration when using package scanning for root
  resource classes. For package scanning the web.xml need only contain the 
  following:

        <init-param>
            <param-name>com.sun.jersey.config.property.packages</param-name>
            <param-value>*list of ';' separated package names*</param-value>
        </init-param>

  previously it was necessary to declare another <init-param> referencing the
  the PackageResourceConfig class.  
- The container SPI is improved and simplified, see JavaDoc of:
    com.sun.jersey.spi.container.ContainerRequest
    com.sun.jersey.spi.container.InBoundHeaders
    com.sun.jersey.spi.container.ContainerResponse
    com.sun.jersey.spi.container.ContainerWriter
- Removed Client.addInjectable, use the following instead:
    ClientConfig.getProviderInstances().add()
- Removed WebApplication.addInjectable, use the following instead:
    ResourceConfig.getProviderInstances().add()
- Instances of provider classes can be declared by the application by adding
  provider instances to the Set returned by the method: